--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
 
   "version": "1.0.0",
 
-  "main": "server/index.js",
+  "main": "index.js",
 
   "scripts": {
 
-    "dev": "clear && nodemon server/index.js",
+    "dev": "clear && nodemon index.js",
 
-    "start": "node server/index.js",
+    "start": "node index.js",
 
     "test": "echo \"Error: no test specified\" && exit 1"
 
