--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-MONGO_URI= "mongodb+srv://dbUser:Nihongo92@elia-cluster.x0yyz.mongodb.net/test"
-port=5000
+MONGO_URI=mongodb+srv://dbUser:Nihongo92@elia-cluster.x0yyz.mongodb.net/test
+PORT=5000
+JWT_SECRET =e55cc9d040e47b1f75ca36228919b4038d0e50d1ebbbaa
